Fix text overlapping with input layer

--- a/public/style.css
+++ b/public/style.css
@@ -55,6 +55,17 @@ a.contact:active {
     color: white;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
+body.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .div1 {
     font-size: 55px;
 }
@@ -78,9 +89,6 @@ button[type=submit] {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     background-color: rgba(35, 35, 35, 0.68);
     text-align: center;
